[package]
name = "litesvm-escrows"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "litesvm_escrows"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[dev-dependencies]
litesvm = "^0.7"
solana-account = "^2"
solana-clock = "^2"
solana-keypair = "^2"
solana-message = "^2"
solana-program = "3.0.0"
solana-signer = "^2"
solana-transaction = "^2"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
